# kui

./: .env.example  .gitignore  .travis.yml  BLOCK-MODERNIZATION-SUMMARY.md  CI_CD_IMPLEMENTATION_COMPLETE.md  CI_CD_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  COMPLETION-SUMMARY.md  CONTEXT-TO-ZUSTAND-MIGRATION.md  DEPLOYMENT_SUMMARY.md  DOCUMENTATION-COMPLETE.md  DOCUMENTATION-UPDATE-SUMMARY.md  DOCUMENTATION_COMPLETION_REPORT.md  DOCUMENTATION_STRUCTURE.md  DUAL-RUNTIME-PLUGINS-IMPLEMENTATION.md  ESLINT-FIX-FINAL-REPORT.md  ESLINT-FIX-REPORT.md  FRONTEND_MENU_INTEGRATION.md  KUBE-COMPOSER-INSPIRATION.md  MACOS_ONLY_PLAN.md  MENU_IMPLEMENTATION_SUMMARY.md  MENU_SYSTEM_COMPLETE.md  MODERNIZATION-ANALYSIS.md  MODERNIZATION-TASK-LIST.md  MODERNIZATION-VISUAL-GUIDE.md  MONACO-TASK-1.4.2-COMPLETE.md  MONACO-UPGRADE-NOTES.md  MONACO-UPGRADE-REPORT.txt  MONACO-UPGRADE-SUMMARY.md  MONACO-V052-FEATURES.md  PHASE1-CLEANUP-FINAL-REPORT.md  PHASE1-COMPLETE.md  PHASE1-PROGRESS-SUMMARY.md  PHASE2-TASKS-2.1-COMPLETE.md  PHASE3-COMPLETE.md  PHASE3-PREPARATION.md  PLUGIN_COMPATIBILITY_REPORT.md  PLUGIN_SYSTEM_IMPLEMENTATION_COMPLETE.md  PLUGIN_TEST_GUIDE.md  PRE-PHASE2-CLEANUP-REPORT.md  (+49 more)
.claude/: AGENTS_SUMMARY.md  CODE_AUDIT_REPORT.md  README.md  mcp.json
src-tauri/: Cargo.toml  DEPENDENCY_UPDATE.md  SCREENSHOT_IMPLEMENTATION.md  SCREENSHOT_SUMMARY.md  SCREENSHOT_TEST.md  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: create_minimal_icons.sh
src-tauri/src/: command_palette.rs  commands.rs  ipc.rs  main.rs  menu.rs  screenshot.rs  window.rs
(+328 files in other folders)
