[package]
name = "kui"
version = "13.1.0"
description = "Kui - A hybrid command-line/GUI Kubernetes tool"
authors = ["The Kubernetes Authors"]
license = "Apache-2.0"
repository = "https://github.com/IBM/kui"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.9", features = [
  "macos-private-api",
  "protocol-asset"
] }
tauri-plugin-shell = "2.3"
tauri-plugin-clipboard-manager = "2.3"
tauri-plugin-dialog = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
log = "0.4"
env_logger = "0.11"
urlencoding = "2.1"
image = "0.25"
open = "5.0"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
core-graphics = "0.24"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(cargo_clippy)'] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
